[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wikivoyage"
version = "0.2"
description = "Consume Wikivoyage pages into pure (elegant) Markdown. Probably."
keywords = ["wikivoyage", "wikipedia", "wiki", "requests", "info", "markdown", "selectolax", "parser"]
authors = [
  { name = "AWeirdDev", email = "aweirdscratcher@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "selectolax",
  "requests"
]

[project.urls]
"Source" = "https://github.com/AWeirdScratcher/wikivoyage"
"Bug Tracker" = "https://github.com/AWeirdScratcher/wikivoyage/issues"

[tool.setuptools]
packages = [
    "wikivoyage"
]